fix: layout when items overflow queue/song list

--- a/static/styles/base.css
+++ b/static/styles/base.css
@@ -1,10 +1,11 @@
 :root { font-family: "Open Sans", sans-serif; color: white; }
-html { height: 100%; }
+html { height: 100%; max-height: 100%; }
 
 body {
     height: 100%;
+    max-height: 100%;
     margin: 0;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 button {
@@ -13,6 +14,8 @@ button {
     cursor: pointer;
     font-size: 1rem;
     font-family: "Open Sans", sans-serif;
+    padding: 0;
+    margin: 0;
 }
 a { text-decoration: none; color: unset; }
 input { font-size: 1rem; }
@@ -22,3 +25,9 @@ p,h1,h2,h3,h4,h5,h6 { margin: 0; }
 .material-icons.md-dark { color: white; }
 
 .hidden { display: none !important; }
+
+::-webkit-scrollbar {
+    width: 0;  /* Remove scrollbar space */
+    height: 0;
+    background: transparent;  /* Optional: just make scrollbar invisible */
+}
