--- a/static/styles/layout.css
+++ b/static/styles/layout.css
@@ -1,8 +1,9 @@
 body {
     display: grid;
+    overflow: hidden;
     grid-template-areas: "side-bar content" "info controls";
     grid-template-columns: clamp(24ch, 32ch, 40ch) 1fr;
-    grid-template-rows: 1fr auto;
+    grid-template-rows: calc(100vh - 84px) 84px;
 }
 .control-bar { grid-area: controls; }
 .info-container { grid-area: info; }
@@ -54,17 +55,23 @@ input[type=range]:hover::-webkit-slider-thumb {
   display: block;
 }
 
+#control-bar {
+    position: relative;
+}
 .control-button-container {
     display: flex;
     justify-content: center;
 }
 
 .control-button {  background: none; }
-.control-button.play-button { font-size: 2.5rem; }
+.control-button.play-button { font-size: 2.5rem; padding: 0 0.25em;}
 .control-button.previous-button,
 .control-button.next-button { font-size: 1.5rem; }
 
-.info-container { display: flex; }
+.info-container {
+    display: flex;
+    position: relative;
+}
 .info-container--inner {
     display: flex;
     flex-direction: column;
@@ -81,7 +88,33 @@ input[type=range]:hover::-webkit-slider-thumb {
 .info--title { font-size: 1.2rem; }
 .info--artist { font-size: 0.85rem; }
 
-.song-row { display: flex; }
+.song-list-container {
+    margin: 2em;
+    height: calc(100% - 4em);
+    position: relative;
+    z-index: 0;
+}
+.song-rows-container {
+    overflow: scroll;
+    height: 100%;
+}
+.song-row {
+    display: grid;
+    grid-auto-flow: column;
+    grid-template-columns: 1.5em 4em repeat(3, 1fr);
+    grid-gap: 1em;
+    align-items: center;
+    margin: 0.5em 0;
+    cursor: pointer;
+}
+.song-row img {
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
+}
+.song-row:hover button {
+    color: #219bc4;
+}
 
 .progress-bar {
     width: min(80%, 554px);
@@ -122,8 +155,13 @@ input[type=range]:hover::-webkit-slider-thumb {
 .side-bar {
     display: grid;
     grid-auto-flow: row;
-    grid-template-rows: 1fr auto;
+    grid-template-rows: calc(100% - 44px) 44px;
     padding: 1em;
+}
+
+#queue-container {
+    margin-bottom: 1em;
+    overflow-y: scroll;
 }
 
 #queue-title {
